# photo-album-practice

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: run.py  wsgi.py
src/app/: __init__.py  config.py  errors.py  forms.py  models.py  views.py
src/app/album/: __init__.py  forms.py  models.py  views.py
src/app/album/static/album/css/: album.css  pagination.css
src/app/album/templates/album/: album.html  create.html  photos.html
src/app/base/: __init__.py  views.py
src/app/base/static/base/css/: footer.css  forms.css  header.css
src/app/base/templates/base/: _base.html  _fields.html  error.html  home.html
src/app/static/css/: album.css  error.css  footer.css  forms.css  header.css  home.css  main.css  photos.css  register.css
src/app/static/js/: main.js  photos.js
src/app/templates/: _base.html  _flashes.html  account.html  album.html  create.html  error.html  home.html  login.html  photos.html  register.html
src/app/user/: __init__.py  forms.py  models.py  views.py
src/app/user/templates/user/: account.html  login.html  register.html
src/tests/: conftest.py  test_auth.py  test_errors.py  test_models.py  test_views.py
